--- a/Jose/Rutherford/mejor/style.css
+++ b/Jose/Rutherford/mejor/style.css
@@ -1,12 +1,37 @@
+html,
 body{
   margin: 0px;
   padding: 0px;
-  background: #000;
+  height:100%;
+  background: #D9D9D9;
   font-family: 'Lato', sans-serif;
 }
 
-img{
-	overflow: hidden;
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+#header {
+	padding:0px;
+	position: fixed;
+	width: 100%;
+}
+#content {
+	padding:0px;
+	padding-bottom:100px;   /* Height of the footer element */
+}
+#footer {
+	width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+	background: #171617;
+	border-top: 7px solid #3498db;
+}
+
+#blanco{
+	color: white;
 }
 
 nav{
