--- a/Jose/Ejercicios-12 HTML, CSS y JavaScript/Clase 5 Sistema de votación/style.css
+++ b/Jose/Ejercicios-12 HTML, CSS y JavaScript/Clase 5 Sistema de votación/style.css
@@ -1,12 +1,29 @@
-.box1{
-	width: 100%;
-	height: 100px;
+.btn{
+	position: relative;
+	margin-rigth: 5px;
+}
+
+
+.box11{
+	height:143px;
+	width:100px;
+	overflow: hidden;
+}
+
+.box22{
+	height:143px;
+	width:100px;
+	overflow: hidden;
+}
+
+.box33{
+	height:143px;
+	width:100px;
+	overflow: hidden;
 }
 
 .box2{
-	width: 100px;
-	overflow: hidden;
-	background-image: src("./imagen.jpg");
-	background-color: #000;	
-	height: 100px;
+	background-color: #000;
+	height: 143px;
 }
+	
